--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -1,13 +1,13 @@
 {{ block title }}
 
-Welcome to this study on decision-making!
+Study overview and bonus points
 
 {{ endblock }}
 {{ block content }}
 
 <div>
     <p>
-        In addition to the Toluna points you will receive for participating, you can receive bonus points.
+        In addition to the Toluna points you will receive for participating, you can receive <b> bonus points</b>.
         Bonus points are determined by your decisions and the decisions of others who are also participating in the study.
         At the end of the study, the points you collected will be converted into Toluna points using the following conversion rate:
     </p>
@@ -15,7 +15,7 @@ Welcome to this study on decision-making!
         1 point = {{ session.real_world_currency_per_point }} Toluna points
     </p>
     <p>
-        You will make decisions in different situations and in different roles. At the end of the study,
+        You will make decisions in different <b>situations</b> and in different <b>roles</b>. At the end of the study,
         one situation and one role will be chosen at random and your bonus points will be determined
         by your own and others' decisions in this situation. Since you do not know which decision counts
         for your extra points, you should treat each decision as if it would be the one that counts.
@@ -26,7 +26,7 @@ Welcome to this study on decision-making!
     <p>
 
     <p>
-        Please read the instructions carefully, as the points you collect during the study will impact your Toluna points.
+        Please read the instructions carefully, as the points you collect during the study will impact your Toluna points and those of other participants.
     <p>
 </div>
 
