--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -4,7 +4,7 @@
 <!--        <img/>-->
 <!--    </div>-->
 
-    Welcome
+    Welcome!
 
 {% endblock %}
 
@@ -17,18 +17,19 @@
         We are researchers at the University of Zürich, Switzerland, studying human decision-making.
     </p>
     <p>
-        For your participation in this study, you will receive {{ participation_fee }} for taking part.
-        In addition, can receive bonus points, determined by your decisions and the decisions of other participants in this study.
+        For your participation, you will receive {{ participation_fee }}.
+        Additionally, you can earn bonus points based on your decisions and those of other participants.
     </p>
     <p>
-        Your participation in this study is completely voluntary.
-        You may refuse to participate without penalty or loss of benefit to which you may otherwise be entitled.
+        Participation is completely voluntary.
+        You may withdraw at any time without penalty or loss of benefits to which you may be otherwise entitled.
     </p>
     <p>
-        By clicking the “I Consent” button, you confirm that you have read the description of this study and that you give consent to participate.
+        By clicking "I Consent," you confirm that you have read the study description and give consent to participate.
+
     </p>
     <p>
-        For questions, concerns, or suggestions about this research, please contact: <br>
+        For questions, concerns, or suggestions, please contact: <br>
         <a href="mailto:charlotte.rossetti@uzh.ch"> charlotte.rossetti@uzh.ch </a>, <a href="mailto:caroline.graf@uzh.ch"> caroline.graf@uzh.ch </a> or <a href="mailto:gross@psychologie.uzh.ch"> gross@psychologie.uzh.ch </a>
     </p>
     <p>
